<resources>
  <string name="app_name">Yet Another Weather</string>

  <string name="current_weather">Now</string>
  <string name="forecast">Forecast</string>
  <string name="settings">Settings</string>
  <string name="wind_speed_label">Wind speed:</string>
  <string name="wind_degree_label">Wind degree:</string>
  <string name="pressure_label">Pressure:</string>
  <string name="cloudiness_label">Cloudiness:</string>
  <string name="sunset_label">Sunset:</string>
  <string name="sunrise_label">Sunrise:</string>
  <string name="content_description_weather_icon">Visualisation of current weather</string>
  <string name="open_weather_map_icon_url" translatable="false">http://openweathermap.org/img/w/%1$s.png</string>
</resources>
